correctly size content to hide scrollbars

--- a/src/client/components/chatInput/chatInput.css
+++ b/src/client/components/chatInput/chatInput.css
@@ -1,5 +1,6 @@
 .chatInput {
     background-color: white;
+    padding: 5px;
 }
 
 .replyPreview {
