--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -2,6 +2,12 @@
 @import './bulma';
 @import '~highlight.js/styles/github-gist.css';
 
+html, body, #container {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
 // dark menu
 .dark-menu {
     li ul {
